darts/base/darts-mongodb/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: c3po
spec:
  selector:
    matchLabels:
      tls_mode: strict
  mtls:
    mode: STRICT
