darts/base/darts-mongodb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb
spec:
    strategy:
        type: Recreate
    template:
        spec:
            securityContext:
                fsGroup: 1337
            containers:
                - name: mongodb
                  image: mongodb
                  imagePullPolicy: "IfNotPresent"
                  securityContext:
                      runAsNonRoot: true
                      runAsUser: 1337
                  ports:
                      - name: mongo
                        containerPort: 27017
                  livenessProbe:
                      tcpSocket:
                          port: 27017
                      initialDelaySeconds: 30
                      periodSeconds: 10
                      timeoutSeconds: 5
                      successThreshold: 1
                      failureThreshold: 6
                  readinessProbe:
                      tcpSocket:
                          port: 27017
                      initialDelaySeconds: 25
                      periodSeconds: 10
                      timeoutSeconds: 5
                      successThreshold: 1
                      failureThreshold: 6
                  volumeMounts:
                      - name: data
                        mountPath: /data/db
                      - name: mongodconf
                        mountPath: /etc/mongod.conf
                        subPath: mongod.conf
            volumes:
                - name: data
                  persistentVolumeClaim:
                      claimName: mongodb
                - name: mongodconf
                  configMap:
                      name: mongodconf
