darts/base/darts-mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
  - name: mongo-port
    port: 27017
    targetPort: mongo
