darts/base/darts-mongodb/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mongo-istio-mtls
  namespace: c3po
spec:
  host: mongodb
  trafficPolicy:
    tls:
      mode: DISABLE
